--- a/stable/linux-bfq-git/PKGBUILD
+++ b/stable/linux-bfq-git/PKGBUILD
@@ -52,8 +52,8 @@ pkgbase=linux-bfq-git
 # pkgname=('linux-bfq-git' 'linux-bfq-git-headers' 'linux-bfq-git-docs')
 _major=5.2
 _srcname=linux
-pkgver=5.2.7.r0.g5697a9d3d55f
-pkgrel=4
+pkgver=5.2.8.r0.gd36a8d2fb62c
+pkgrel=1
 arch=('x86_64')
 url="https://github.com/sirlucjan/bfq-mq-lucjan"
 license=('GPL2')
@@ -70,7 +70,7 @@ _bfq_path_3="bfq-paolo-dev-lucjan-v3"
 _bfq_patch_3="0003-block-bfq-dev-lucjan.patch"
 _bfq_path_4="bfq-paolo-dev-lucjan-v4"
 _bfq_patch_4="0004-block-bfq-dev-lucjan.patch"
-_bfq_path_5="bfq-paolo-dev-lucjan-v5"
+_bfq_path_5="bfq-paolo-dev-lucjan-v5r1"
 _bfq_patch_5="0005-block-bfq-dev-lucjan.patch"
 _gcc_path="https://raw.githubusercontent.com/graysky2/kernel_gcc_patch/master"
 _gcc_patch="enable_additional_cpu_optimizations_for_gcc_v9.1+_kernel_v4.13+.patch"
