--- a/stable-rc/linux-uksm-git/PKGBUILD
+++ b/stable-rc/linux-uksm-git/PKGBUILD
@@ -49,7 +49,7 @@ pkgbase=linux-uksm-git
 # pkgname=('linux-uksm-git' 'linux-uksm-git-headers' 'linux-uksm-git-docs')
 _major=5.4
 _srcname=linux-stable-rc
-pkgver=5.4.5.r81.gc7cfa74dd315
+pkgver=5.4.6.r0.g957a16c3e6e1
 pkgrel=1
 pkgdesc='Linux UKSM'
 arch=('x86_64')
@@ -70,13 +70,12 @@ _gcc_patch="enable_additional_cpu_optimizations_for_gcc_v9.1+_kernel_v4.13+.patc
 source=("git://git.kernel.org/pub/scm/linux/kernel/git/stable/${_srcname}.git#branch=linux-${_major}.y"
         "${_uksm_path}/${_uksm_patch}"
         "${_gcc_path}/${_gcc_patch}"
-        "${_lucjanpath}/arch-patches-v6-sep/0001-ZEN-Add-sysctl-and-CONFIG-to-disallow-unprivileged-C.patch"
-        "${_lucjanpath}/arch-patches-v6-sep/0002-lib-devres-add-a-helper-function-for-ioremap_uc.patch"
-        "${_lucjanpath}/arch-patches-v6-sep/0003-mfd-intel-lpss-Use-devm_ioremap_uc-for-MMIO.patch"
-        "${_lucjanpath}/arch-patches-v6-sep/0004-PCI-pciehp-Do-not-disable-interrupt-twice-on-suspend.patch"
-        "${_lucjanpath}/arch-patches-v6-sep/0005-PCI-pciehp-Prevent-deadlock-on-disconnect.patch"
-        "${_lucjanpath}/arch-patches-v6-sep/0006-ACPI-PM-s2idle-Rework-ACPI-events-synchronization.patch"
-        "${_lucjanpath}/arch-patches-v6-sep/0007-ALSA-hda-Fix-regression-by-strip-mask-fix.patch"
+        "${_lucjanpath}/arch-patches-v7-sep/0001-ZEN-Add-sysctl-and-CONFIG-to-disallow-unprivileged-C.patch"
+        "${_lucjanpath}/arch-patches-v7-sep/0002-lib-devres-add-a-helper-function-for-ioremap_uc.patch"
+        "${_lucjanpath}/arch-patches-v7-sep/0003-mfd-intel-lpss-Use-devm_ioremap_uc-for-MMIO.patch"
+        "${_lucjanpath}/arch-patches-v7-sep/0004-PCI-pciehp-Do-not-disable-interrupt-twice-on-suspend.patch"
+        "${_lucjanpath}/arch-patches-v7-sep/0005-PCI-pciehp-Prevent-deadlock-on-disconnect.patch"
+        "${_lucjanpath}/arch-patches-v7-sep/0006-ACPI-PM-s2idle-Rework-ACPI-events-synchronization.patch"
          # the main kernel config files
         'config')
 
@@ -338,11 +337,10 @@ done
 sha512sums=('SKIP'
             'c9aa593db5c142cbc60c60fb15dc780c11af03a6607301250c27d5042b14481f1ea7edfc87bde70019d2bcd1f1d53c05c3291f94b9e66795c81fade740419818'
             '2eb574fbfac6e334d3b06e52e466dbf8e88034515729b6571990b10f75a0fe2a52f188615405c5a695b5820669e595deead44d7961a97c5872359be3435fdf63'
-            'e3b5ecdb0236df953122520602c9cada5eed807431399dfcd73d374bda573bd89c609bd9d60dc2934706db1a809c07c28a90a58d5f8fccd70d5bde11278a5b8e'
-            'a5d0512070c7ea2d4d4e6ee4c1c762d1ea8cac959e1c7806cef0b551106ed52f4a018723f7febd5a66b563e884bebe6906e8638a2552bcdc515be5ec17d4d22f'
-            '1b016118f8fa1eef52bc4bf24979c476971c85b2ef3d9f8cf9d38e44993a0d1911d436e520ed28b05e5e8a870914046b7dd8eec889af9359e94ded688c848be9'
-            '80a39bfef8345fc84252ccc1b81f4aab0941e4e6042ae5fca2046f185eb3d0397b10de3166faad39ff7d43bd5ef9e3538e8bdd272675c11551941782a546f935'
-            '008f81afa097e5cc7584c0976d7ce31aef1b5fc2c248be2b758c39911e61a8df7ad043600af5ee10203b49b0f768f7f0db3beb1b9c0ec66bc7ee23b0ca012f05'
-            'c22aec831ec0bde58ee4c77c9bbb021d5dd0efc501e46dbb22d98d317913aa3df1baebf646be3ea34e97bfbb27f6a1faa89aafa9106d73712c69852f33d5c6f3'
-            '1c349670b8a6deaa1bbb99eda05e063bffdfe6c7d9054ba7c7b943a99a49da1f039564d68acd9ccc241603b93dfbe03d2e8aa0426b2093e0e41fbaf4e2ef2250'
+            'c11c31dffe1397c71cf00f2015730ca5c48ad36c5cb282d3fa26b1baf24deafbfe9f42b609ea80750150c13e82f1affa9f0fee1d1f0f141b6245250d0bc4c2bb'
+            '33344bc367c84ab59eb21832ca0a12b0b4e18070bcdef92a0fc67eda984b6597f65164fb4d0c36050afa0c24482dec8062757cd4f041943888457c003420fd67'
+            '8f670dad432e413a263e04623fe8a9a1278474b9d45c5cc4de053798714b8155c79953c99484871e4bbeba97a4bad732ab6b70115bdea0919fa75e42b8f7151a'
+            'db50a45349455a8bcc6a36be72bd3ee3495d87e059fce292ac87251deaf5f1d9f8c7e1f2d9fed37a916a611db600ff5a767c0b0e09d2d42494f017105a3dae00'
+            '753b2219935f3ae10e245108ca7a9bc75a8e81929574358421902d7dccbd15018322f09991e5081b5078e9750d1f3fa0334bb373cc8719f793795a5c5bce5f75'
+            '886c34212fc4efea47a7ee80225ce362e63c81796e25cc81fcf3587c362a1a79c7c2cb0577170827209ae71a161e8e25752b5ec65f3e54f3935335bddb923821'
             'da14f7326e5321b2c6ed35d52a1ac1c012934fa894815472c1f7d84e238c4182e1b45c3da173dc084b027020d0cc2dd140f91a76bfeafe1750dd375d7ef0e85a')
