--- a/stable-rc/linux-aufs-git/PKGBUILD
+++ b/stable-rc/linux-aufs-git/PKGBUILD
@@ -47,10 +47,10 @@ _1k_HZ_ticks=
 
 pkgbase=linux-aufs-git
 # pkgname=('linux-aufs-git' 'linux-aufs-git-headers' 'linux-aufs-git-docs')
-_major=5.4
+_major=5.5
 _srcname=linux-stable-rc
-pkgver=5.4.17.r91.g0c7175ac8c7e
-pkgrel=1
+pkgver=5.5.1.r24.g8dc0cb8ae177
+pkgrel=0
 pkgdesc='Linux AUFS'
 arch=('x86_64')
 url="https://github.com/sfjro/aufs5-standalone"
@@ -61,25 +61,17 @@ makedepends=('kmod' 'bc' 'libelf' 'git' 'python-sphinx' 'python-sphinx_rtd_theme
 #_lucjanpath="https://raw.githubusercontent.com/sirlucjan/kernel-patches/master/${_major}"
 _lucjanpath="https://gitlab.com/sirlucjan/kernel-patches/raw/master/${_major}"
 _aufs_path="aufs-patches"
-_aufs_ver="20200127"
+_aufs_ver="20200203"
 _aufs_patch="0001-aufs-${_aufs_ver}.patch"
 _gcc_path="https://raw.githubusercontent.com/graysky2/kernel_gcc_patch/master"
-_gcc_patch="enable_additional_cpu_optimizations_for_gcc_v9.1+_kernel_v4.13+.patch"
+_gcc_patch="enable_additional_cpu_optimizations_for_gcc_v9.1+_kernel_v5.5+.patch"
 
 source=("git://git.kernel.org/pub/scm/linux/kernel/git/stable/${_srcname}.git#branch=linux-${_major}.y"
         "${_lucjanpath}/${_aufs_path}/${_aufs_patch}"
         "${_gcc_path}/${_gcc_patch}"
-        "${_lucjanpath}/arch-patches-v24-sep/0001-ZEN-Add-sysctl-and-CONFIG-to-disallow-unprivileged-C.patch"
-        "${_lucjanpath}/arch-patches-v24-sep/0002-lib-devres-add-a-helper-function-for-ioremap_uc.patch"
-        "${_lucjanpath}/arch-patches-v24-sep/0003-mfd-intel-lpss-Use-devm_ioremap_uc-for-MMIO.patch"
-        "${_lucjanpath}/arch-patches-v24-sep/0004-PCI-pciehp-Prevent-deadlock-on-disconnect.patch"
-        "${_lucjanpath}/arch-patches-v24-sep/0005-ACPI-PM-s2idle-Rework-ACPI-events-synchronization.patch"
-        "${_lucjanpath}/arch-patches-v24-sep/0006-iwlwifi-pcie-restore-support-for-Killer-Qu-C0-NICs.patch"
-        "${_lucjanpath}/arch-patches-v24-sep/0007-drm-i915-save-AUD_FREQ_CNTRL-state-at-audio-domain-s.patch"
-        "${_lucjanpath}/arch-patches-v24-sep/0008-drm-i915-Fix-audio-power-up-sequence-for-gen10-displ.patch"
-        "${_lucjanpath}/arch-patches-v24-sep/0009-drm-i915-extend-audio-CDCLK-2-BCLK-constraint-to-mor.patch"
-        "${_lucjanpath}/arch-patches-v24-sep/0010-drm-i915-Limit-audio-CDCLK-2-BCLK-constraint-back-to.patch"
-        "${_lucjanpath}/arch-patches-v24-sep/0011-drm-amdgpu-Add-DC-feature-mask-to-disable-fractional.patch"
+        "${_lucjanpath}/arch-patches-v3-sep/0001-ZEN-Add-sysctl-and-CONFIG-to-disallow-unprivileged-C.patch"
+        "${_lucjanpath}/arch-patches-v3-sep/0002-iwlwifi-pcie-restore-support-for-Killer-Qu-C0-NICs.patch"
+        "${_lucjanpath}/arch-patches-v3-sep/0003-Btrfs-send-fix-emission-of-invalid-clone-operations-.patch"
          # the main kernel config files
         'config')
 
@@ -339,17 +331,9 @@ for _p in "${pkgname[@]}"; do
 done
 
 sha512sums=('SKIP'
-            'a5cc4419456d515978717b248a6b8a9495c5bda7737c53e3e2be4e477b85ad093aa285385a1355e72e19d64051d5f6a2b603708371f45c6e211a7d2f56043128'
-            '2eb574fbfac6e334d3b06e52e466dbf8e88034515729b6571990b10f75a0fe2a52f188615405c5a695b5820669e595deead44d7961a97c5872359be3435fdf63'
-            '0312192cd80f65a85a1aec8d9c1087ed7bcc12ac7bbb1b5185e212915dc3b1cc0ff98abf6ecc78de46d1cd36d2bec04ac3687910e33253c2388692ea335877c1'
-            'eb2877dcde10739e607e34d69c92dbf47d07e3a55885d6069fffbadc43004d684e4a0ca01644732e517f0c9dc8434a808f3908caf0371170f0eb5fd4ae78274c'
-            'b7bf703bdeb224fb067b5652ad0974ab3ec0b8b47f5af1e5ef29befcc5cab56f33b02aba22155a0dfd45747395fac3078bdfc62f8c853b160c0a02a8e25f629a'
-            '689842289136e2db88f8c8556b8cffce5c914bbef864a9cc34020b10deee79929953fe48e6283ce70a8b80d486ce3388834f29cadbdf31b0952b7a768474b0f4'
-            '0cc9ab098e8904e668162750588fc5ecc727b0c87f9709bc2f85e3510bd46d6b60059395ddc1a2fc3f70dd37e8f9f500ee0e1ebfdb8c5e072cc367ddb432cd68'
-            'a274ca2648df4e59e403a3f94933121ff4bfc7f264aea51bba94e207fc2327fa9578f7ad6dfa6e38ab96e071ef7779b75d0c297dca52c927d0fe5ca1b9f9fcec'
-            '0d5c16f88634c61f78629e3088a531fca67566792672743665290c0775a73d867b4f835e35dfd4af60df60ac6e5d152a611adeba181eea454b64a517dfd5254d'
-            '8519decb9727617e3dfc0be299abd521d7f6b322fa8f43b7ffd21d172d86a94370beb85b01aaef2c9da070f60492b923060262fabefba6d5093f25485aa6f56c'
-            '16dfc6c3ea1c8a4979f34f8b269baf7f3f24fb63821cf42ef29e3ece5a0286907f1a7e6173fbf88c807cc91c630caa68c033067a411845a1350618da7cd37a3e'
-            'e05deb50797421b409b87ca3cb480f88085fab34fba4955043c572146dbe46e6328b70fc12bdc62ff0abf481e65fc899a30b63a94d904f7b25c572f6c2230b7b'
-            '29755566b4a542442ae3b5c1d97e972d6f4674c283686860ac23378cc97fd643ea8cecb7a8588e169d3dc1ea646f37d384940c6f5c7c1281d5f9eee68867478c'
-            '27e19ff92804fdf867edef23bbdd8eaeade27273151fa2fee4db5ab1840a0d08e668c25654917017fb1dfc79b0416b0af2fdfe485c57437b20c3f857299d068a')
+            '487c062cf2d0e12faa2797547b25bd0a6cfca7e0df1bf8b7e9f23ca253477aff0f889467e6223dd1992ea322034ede09929e67a03317fad457d908aac8ebac14'
+            '52b14ef834769d2b4567e756a4485995acd2e3f5b989cbb53f9b113b42ff67b736bbcb284b95fe15c9efb846fd12320a26a131e4ce9af50b521114d274b472f1'
+            '940b9ceb5f53f05e0e516882215b9929126284c1c1fbf72dce17e23b630342fc9459b6f510d272e7a1336fa7ec5d9059e3bcb5a42c091c43065beca8d538f9c9'
+            '79315ac7002e3a955910b289b572f4cd2285e4218ef9564cd4333f8c6d029f5d79c9c9ee9b745e33b88c01d52e122b399c3142911d1781b55616703442fb99fd'
+            '98d8b4dfe41831c6bc82698e8ded74a91d54b5bdb4dcad56efb39eddeb3e3ce8975f00d414f574dce1706cf83d8bccf77791264272e05f725c44e783ecbe4ea2'
+            'e4b4ad4ac0892b6f799f438f60b68a7a4f1d0f2908bc8211e0797eb33a10e2fccf9955a0b25e2501d8ac9f433f49d26c795aac4c7eb3b0c3260380fb48a8e885')
