--- a/stable-rc/linux-uksm-git/PKGBUILD
+++ b/stable-rc/linux-uksm-git/PKGBUILD
@@ -49,8 +49,8 @@ pkgbase=linux-uksm-git
 # pkgname=('linux-uksm-git' 'linux-uksm-git-headers' 'linux-uksm-git-docs')
 _major=5.4
 _srcname=linux-stable-rc
-pkgver=5.4.18.r0.g58c72057f662
-pkgrel=2
+pkgver=5.4.20.r37.g6f8f5c79416e
+pkgrel=1
 pkgdesc='Linux UKSM'
 arch=('x86_64')
 url="https://github.com/dolohow/uksm"
@@ -70,17 +70,16 @@ _gcc_patch="enable_additional_cpu_optimizations_for_gcc_v9.1+_kernel_v4.13+.patc
 source=("git://git.kernel.org/pub/scm/linux/kernel/git/stable/${_srcname}.git#branch=linux-${_major}.y"
         "${_uksm_path}/${_uksm_patch}"
         "${_gcc_path}/${_gcc_patch}"
-        "${_lucjanpath}/arch-patches-v24-sep/0001-ZEN-Add-sysctl-and-CONFIG-to-disallow-unprivileged-C.patch"
-        "${_lucjanpath}/arch-patches-v24-sep/0002-lib-devres-add-a-helper-function-for-ioremap_uc.patch"
-        "${_lucjanpath}/arch-patches-v24-sep/0003-mfd-intel-lpss-Use-devm_ioremap_uc-for-MMIO.patch"
-        "${_lucjanpath}/arch-patches-v24-sep/0004-PCI-pciehp-Prevent-deadlock-on-disconnect.patch"
-        "${_lucjanpath}/arch-patches-v24-sep/0005-ACPI-PM-s2idle-Rework-ACPI-events-synchronization.patch"
-        "${_lucjanpath}/arch-patches-v24-sep/0006-iwlwifi-pcie-restore-support-for-Killer-Qu-C0-NICs.patch"
-        "${_lucjanpath}/arch-patches-v24-sep/0007-drm-i915-save-AUD_FREQ_CNTRL-state-at-audio-domain-s.patch"
-        "${_lucjanpath}/arch-patches-v24-sep/0008-drm-i915-Fix-audio-power-up-sequence-for-gen10-displ.patch"
-        "${_lucjanpath}/arch-patches-v24-sep/0009-drm-i915-extend-audio-CDCLK-2-BCLK-constraint-to-mor.patch"
-        "${_lucjanpath}/arch-patches-v24-sep/0010-drm-i915-Limit-audio-CDCLK-2-BCLK-constraint-back-to.patch"
-        "${_lucjanpath}/arch-patches-v24-sep/0011-drm-amdgpu-Add-DC-feature-mask-to-disable-fractional.patch"
+        "${_lucjanpath}/arch-patches-v25-sep/0001-ZEN-Add-sysctl-and-CONFIG-to-disallow-unprivileged-C.patch"
+        "${_lucjanpath}/arch-patches-v25-sep/0002-lib-devres-add-a-helper-function-for-ioremap_uc.patch"
+        "${_lucjanpath}/arch-patches-v25-sep/0003-mfd-intel-lpss-Use-devm_ioremap_uc-for-MMIO.patch"
+        "${_lucjanpath}/arch-patches-v25-sep/0004-PCI-pciehp-Prevent-deadlock-on-disconnect.patch"
+        "${_lucjanpath}/arch-patches-v25-sep/0005-iwlwifi-pcie-restore-support-for-Killer-Qu-C0-NICs.patch"
+        "${_lucjanpath}/arch-patches-v25-sep/0006-drm-i915-save-AUD_FREQ_CNTRL-state-at-audio-domain-s.patch"
+        "${_lucjanpath}/arch-patches-v25-sep/0007-drm-i915-Fix-audio-power-up-sequence-for-gen10-displ.patch"
+        "${_lucjanpath}/arch-patches-v25-sep/0008-drm-i915-extend-audio-CDCLK-2-BCLK-constraint-to-mor.patch"
+        "${_lucjanpath}/arch-patches-v25-sep/0009-drm-i915-Limit-audio-CDCLK-2-BCLK-constraint-back-to.patch"
+        "${_lucjanpath}/arch-patches-v25-sep/0010-drm-amdgpu-Add-DC-feature-mask-to-disable-fractional.patch"
          # the main kernel config files
         'config')
 
@@ -338,15 +337,14 @@ done
 sha512sums=('SKIP'
             'c9aa593db5c142cbc60c60fb15dc780c11af03a6607301250c27d5042b14481f1ea7edfc87bde70019d2bcd1f1d53c05c3291f94b9e66795c81fade740419818'
             '2eb574fbfac6e334d3b06e52e466dbf8e88034515729b6571990b10f75a0fe2a52f188615405c5a695b5820669e595deead44d7961a97c5872359be3435fdf63'
-            '0312192cd80f65a85a1aec8d9c1087ed7bcc12ac7bbb1b5185e212915dc3b1cc0ff98abf6ecc78de46d1cd36d2bec04ac3687910e33253c2388692ea335877c1'
-            'eb2877dcde10739e607e34d69c92dbf47d07e3a55885d6069fffbadc43004d684e4a0ca01644732e517f0c9dc8434a808f3908caf0371170f0eb5fd4ae78274c'
-            'b7bf703bdeb224fb067b5652ad0974ab3ec0b8b47f5af1e5ef29befcc5cab56f33b02aba22155a0dfd45747395fac3078bdfc62f8c853b160c0a02a8e25f629a'
-            '689842289136e2db88f8c8556b8cffce5c914bbef864a9cc34020b10deee79929953fe48e6283ce70a8b80d486ce3388834f29cadbdf31b0952b7a768474b0f4'
-            '0cc9ab098e8904e668162750588fc5ecc727b0c87f9709bc2f85e3510bd46d6b60059395ddc1a2fc3f70dd37e8f9f500ee0e1ebfdb8c5e072cc367ddb432cd68'
-            'a274ca2648df4e59e403a3f94933121ff4bfc7f264aea51bba94e207fc2327fa9578f7ad6dfa6e38ab96e071ef7779b75d0c297dca52c927d0fe5ca1b9f9fcec'
-            '0d5c16f88634c61f78629e3088a531fca67566792672743665290c0775a73d867b4f835e35dfd4af60df60ac6e5d152a611adeba181eea454b64a517dfd5254d'
-            '8519decb9727617e3dfc0be299abd521d7f6b322fa8f43b7ffd21d172d86a94370beb85b01aaef2c9da070f60492b923060262fabefba6d5093f25485aa6f56c'
-            '16dfc6c3ea1c8a4979f34f8b269baf7f3f24fb63821cf42ef29e3ece5a0286907f1a7e6173fbf88c807cc91c630caa68c033067a411845a1350618da7cd37a3e'
-            'e05deb50797421b409b87ca3cb480f88085fab34fba4955043c572146dbe46e6328b70fc12bdc62ff0abf481e65fc899a30b63a94d904f7b25c572f6c2230b7b'
-            '29755566b4a542442ae3b5c1d97e972d6f4674c283686860ac23378cc97fd643ea8cecb7a8588e169d3dc1ea646f37d384940c6f5c7c1281d5f9eee68867478c'
+            'e725a711b4ab20d32ba3095b75ded88b6173fa5ceccd8f345de8f94251f22539dfc52e4543c8bd574562072cd5c9ccaf07c9a5321a74ef94a2a911783698fbf6'
+            '24407b738ee901b1ea9697b185a09721c22754f236ac015915f31760a2b8797bb71b7ba1aad1397b6072b780b994060e391bbab4972911cfef828ef7382b935c'
+            '642b4b93a5a992787f4037154d499978f4ca6d93d82f55e7e297c4ea88f581904fd349d8382055f0de3c419476ede2bd460165facc3ef9f842c0ddaabd714518'
+            '305f10c402babf875ccffb3536a0295c80af973f86d501b12a49f1434c9f7f272564dcd4962c5ca2851831c61207e7f2c8e68aee97e00178a41f4b69afe2c458'
+            'ac9683e30f25658890033fb4a967a7443ffa6efa984c1df47346a2901342b91f826a3c3d407775e274912726602674ce2add56520f60f39a9cb1476bc894918f'
+            '76168b77375b788951b82b510c1e3dc6a17451c6a5bbb73c7205eebb95aafd904f851f6773b64bbb88b53e83b9412e5adeb504e2a4eddbfc5fbd60c402e15fbc'
+            '36252bde229ee6e39cbceb39f514888c5affcfe6206176454d205cee00d278597f4288dd5524b808fd62a7c79a756f6a6b56a2ea8dac170bc9d4da75413375b6'
+            '5eb88834b6f08d1ae8a29d97bc1bc27b77d72004762d2e8d298c1a9d1072206cf987d7e39b852821fa68133ec10223b23f57f6f132117d4e7600bfc610c73f86'
+            '77169709dd7fedb35ca5125705615b8fbdfe873d6cfbb2bc95d068d0a4e1adcda848a62af2d76f71fc73f859c97ebff0c7a4c27c354d43034d857f6f07d74b8d'
+            '08777c88687a78c1e515147beaac3c3ab88a850f26038c5ed5be35308f0a06a1232d4c8bd46f5ac4b003277820d37e40289125cd3f624a1aa99aa2c4b716714c'
             'cdd36f59c908f24b3a1df9898671068c0a2eccb6f445c54dc069a379bd3337b4986c3783c060c35bd7009c97c91da011a8abbc348bf3dff283c76ee7ea8d862f')
